--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,8 +19,10 @@
         <h1 class="text-white">PromoAppへようこそ</h1>
         <a class="lead text-white">知ってもらいたいお店と、知りたいお客様を繋ぎ合わせるアプリです</a>
         <a class="lead text-white">さあ、はじめましょう</a>
-        <p class="post-btn">
+        <p class="post-bt">
           <%= link_to "新規登録", new_user_registration_path, class:"btn btn-primary my-2" %>
+          <%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post, class:"btn btn-secondary btn-sm"%>
+          <%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post, class:"btn btn-secondary btn-sm"%>
         </p>
        <% end %>
       </div>
