--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,8 +13,8 @@
          会員情報入力
        </h3>
      </div>
-     <%= link_to "Facebookで登録", user_facebook_omniauth_authorize_path, method: :post%>
-     <%= link_to "Googleで登録", user_google_oauth2_omniauth_authorize_path, method: :post%>
+     <%= link_to "Facebook", user_facebook_omniauth_authorize_path, method: :post, class:"facebook" %>または
+     <%= link_to "Google", user_google_oauth2_omniauth_authorize_path, method: :post,class:"google" %>で登録
 
 
      <%= render  'share/error_messages', model: f.object %>
