--- a/app/views/posts/_footer.html.erb
+++ b/app/views/posts/_footer.html.erb
@@ -5,7 +5,7 @@
          <strong>About</strong>
        </p>
        <a href="#" class="navbar-brand d-flex align-items-center">
-         <a class="text-muted">PromoAppとは、お買い得情報満載のプロショップと職人様を繋ぎ合わせるアプリです。</a>
+         <a class="text-muted">PromoTOOLとは、お買い得情報満載のショップとお客様を繋ぎ合わせるアプリです。</a>
        </a>
      </div>
       <ul class="list-unstyled">
