--- a/app/views/posts/_header.html.erb
+++ b/app/views/posts/_header.html.erb
@@ -31,7 +31,7 @@
 <header>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container">
-      <%= link_to "PromoApp", root_path, class:"navbar-brand d-flex align-items-center" %>
+      <%= link_to "PromoTOOL", root_path, class:"navbar-brand d-flex align-items-center" %>
       <% if user_signed_in? %>
        <div class="nickname">
          <%= link_to current_user.nickname , user_path(current_user.id), class:"mypage-btn" %>
