--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -65,7 +65,7 @@
      <%= link_to "編集する" , edit_post_path(@post.id), class:"btn btn-success btn-lg" %>
    </div>
    <div class="destroy-btn">
-     <%= link_to "削除する" , post_path(@post.id), method: :DELETE, class:"btn btn-secondary btn-lg" %>
+     <%= link_to "削除する" , post_path(@post.id), method: :DELETE, data: {confirm: "投稿を削除しますか?"}, class:"btn btn-secondary btn-lg" %>
    </div>
    <% end %>
    <% if @post.price.present?%>
