--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -186,7 +186,7 @@
           <%= link_to "編集する" , edit_user_registration_path(@user.id), class:"btn btn-success btn-lg" %>
        </div>
        <div class="destroy-btn">
-         <%= link_to "退会する" , user_path(@user.id), method: :DELETE, class:"btn btn-secondary btn-lg" %>
+         <%= link_to "退会する" , user_path(@user.id), method: :DELETE, data: {confirm: "退会しますか?"}, class:"btn btn-secondary btn-lg" %>
        </div>
        <div class="reverse-btn">
           <%= link_to "戻る", root_path, class:"btn btn-secondary btn-lg" %>
